add post class review question answers

--- a/lessons/Sets and Dictionaries (post class).ipynb
+++ b/lessons/Sets and Dictionaries (post class).ipynb
@@ -963,7 +963,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "example_from_function[True] = False"
@@ -992,7 +994,9 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "type_examples = {\n",
@@ -1984,7 +1988,9 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# In this example, we only care about who's bringing what.\n",
@@ -2215,8 +2221,74 @@
     "- What does the code for an empty dictionary look like?\n",
     "- What happens if you access a key that doesn't exist in a dict like so: states['England']\n",
     "- What is the difference between the code: `'apple' in foods` and `'apple' in foods.values()`\n",
-    "- What is the difference between: `foo['monkey']` and `foo.get(monkey)`?\n",
+    "- What is the difference between: `foo['monkey']` and `foo.get('monkey')`?\n",
     "- What do lists and dicts have in common?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# empty dictionary\n",
+    "{}\n",
+    "dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#access a missing key\n",
+    "KeyError"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#difference between 'apple' in foods and 'apple' in foods.values()\n",
+    "one checks keys the other checks values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# differnce between foo['monkey'] and foo.get(monkey)?\n",
+    "first assumes 'monkey' is a key in the dictionary.\n",
+    "second is the 'safe' way of accessing the dictionary for key 'monkey'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#What do lists and dicts have in common?\n",
+    "- both mutable\n",
+    "- can be nested\n",
+    "- values can be anything\n",
+    "- dictionaries are unordered\n",
+    "- dictionaries cannot contain duplicates (keys)"
    ]
   },
   {
