--- a/lessons/Flow Control.ipynb
+++ b/lessons/Flow Control.ipynb
@@ -63,7 +63,7 @@
     "## Comparison Operators\n",
     "Used for comparing!  Always return a Boolean Value.\n",
     "- `==` equals\n",
-    "- `!=` not equals\n",
+    "- `!==` not equals\n",
     "- `<` less than\n",
     "- `>` greater than\n",
     "- `<=` less than or equals\n",
